--- a/client/package.json
+++ b/client/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/react-hooks": "^4.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "apollo-boost": "^0.4.9",
-    "graphql": "^14.7.0",
+    "graphql": "^16.6.0",
     "react": "^18.2.0",
     "react-apollo": "^3.1.5",
     "react-dom": "^18.2.0",
